src/layouts/FixedLeft/style.scss
@import '../../styles/base';

.wrapper {
  box-sizing: border-box;
  min-height: 100%;
  height: 100%;
}

.fixedWrapper {
  position: fixed;
  margin-top: 0;
  margin-left: 0;
  height: 100%;
  min-height: 100%;
  overflow-y: scroll;
  z-index: 20;
  &::-webkit-scrollbar { width: 0 !important }
}

.contentWrapper {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  box-sizing: border-box;
  min-height: 100%;
  background: $cBackground;
  overflow: auto;
  .stub {
    visibility: hidden;
    opacity: 0;
    flex: none;
  }
  .content {
    box-sizing: border-box;
    min-height: 100%;
    flex-grow: 1;
    overflow-x: auto;
    margin: 0 30px;
  }
}

